examples/test/testpolicy1924.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1924
  namespace: namespace218
spec:
  podSelector:
    matchLabels:
      key7: value41
      key36: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value10
      podSelector:
        matchLabels:
          key26: value38
          key2: value42
